Import curtisnewbie-bom for dependency management